Fix reference guide spacing at the top

--- a/src/css/views/guide.styl
+++ b/src/css/views/guide.styl
@@ -18,10 +18,6 @@
 		padding-top: 2em;
 	}
 
-    main {
-        padding-top: $navHeight + $subnavHeight;
-    }
-
     .headerlink {
         display: none;
     }
@@ -359,6 +355,7 @@ table.docutils {
     font-size: 0.9rem;
     margin:2rem 0 2rem 2rem;
     transition: transform 0.3s;
+    top: $navHeight + $subnavHeight;
 
 
     &:after {
@@ -393,7 +390,7 @@ table.docutils {
 
 .scrolled {
     #toc {
-        transform: translate(0,-90px);
+        transform: translate(0,-30px);
 
         .tocList {
             max-height: 85vh;
